--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.3"
+    "joi": "^17.6.0",
+    "mongoose": "^6.3.3",
+    "slug": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
