--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
-    "string-strip-html": "^9.1.12"
+    "string-strip-html": "^9.1.12",
     "slug": "^5.3.0"
   },
   "devDependencies": {
