--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
-    "string-strip-html": "^9.1.12",
-    "slug": "^5.3.0"
+    "nodemailer": "^6.7.5",
+    "slug": "^5.3.0",
+    "string-strip-html": "^9.1.12"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
